--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>pagina web</title>
 </head>
 <body>
-  PERFIL  
+  <h1>PERFIL</h1><br>
+  <img src="imagen/descarga (2).jpg" alt=""> 
+  <p>
+    Nombre: <label for="Edad"></label>
+    <input type="text"> <br>
+    Edad: <label for="Edad"></label>
+    <input type="number" ><br>
+    Genero <label for="Genero"></label>
+    <select id="Genero">
+      <option value=""></option>
+      <option value="Masculino">Masculino</option>
+      <option value="Femenino">Femenino</option>
+      <option value="otro">otro</option>
+    </select>
+    <h2>Informacion</h2>
+    <h4>los datos ingresados hacen referencia a la persona......... que tiene una 
+      edad de......... años y es del sexo............
+    </h4>
+  </p>
+
+  </p>
 </body>
 </html>
